--- a/about.css
+++ b/about.css
@@ -37,7 +37,7 @@ header{
   height: 10vmin;
   z-index: 2;
   display: flex;
-  margin: 0.5em 1em 0;
+  margin: 1em;
   justify-content: space-between;
 }
 
@@ -53,7 +53,7 @@ header{
 }
 
 .linkFolder{
-    position:relative;
+ position:relative;
   margin: 0.5em 2em;
 }
 
@@ -68,17 +68,17 @@ ol{
 }
 
 
-.grid-container{
+/*.grid-container{
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100vw;
   height: 100vh;
-  margin: 12em;
 
 }
-
+*/
 .aboutGrid{
-  position: relative;
+
   z-index: 1;
 
   
@@ -87,54 +87,106 @@ ol{
   grid-auto-rows: repeat(3, 1fr);
 
 
-
-
-  padding: 2em;
   align-items: center;
+  position: relative;
+  margin: 3em 20%;
+  padding: 0;
+
 
 }
 
 p{
   position: relative;
 }
+
 .about, 
 .bio,
 .credits{
-  background: rgba(255, 255, 255);
+  background: rgba(255, 255, 255, 0.80);
   border: 1px dashed black;
   margin: 0.5em;
   box-shadow: 0 0 10px black;
 }
 
 .about{
-  grid-area: 1 / 1 / 2 / 2;
-max-width: 600px;
+grid-area: 1 / 1 / 2 / 2;
+max-width: 40vw;
 }
 
 .bio{
    grid-area: 2/ 1 / 3 / 2;
-   max-width: 800px;
-  margin-left: 20em;
+   max-width: 40vw;
+  margin-left: 10em;
 
 }
 .credits{
    grid-area: 3 / 1 / 4 / 2;
-   max-width: 600px;
-   margin-left: 50em;
+   max-width: 40vw;
+   margin-left: 20em;
 
 }
 
 .info-text{
   color:black;
-  padding: 0.5em 2em;
+  padding: 0.4em 1em;
   text-justify: inter-word;
   text-align: justify;
   font-size:1.25em;
   grid-gap: none;
+  margin: 0.5em;
 }
 
 .emphasis{
   color: blue;
   font-weight: bold;
 }
+@media only screen and (max-width: 675px){
 
+body{
+
+}
+
+#video-bg{
+
+}
+.aboutGrid{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 1em;
+}
+
+.about,
+.bio,
+.credits{
+  max-width: 90vw;
+  margin: 1em 0 0;
+}
+
+.about{
+  margin-top: 4em;
+}
+.bio{
+  width: 90vw;
+}
+
+.info-text{
+  font-size: 1em;
+}
+
+#folderThree,
+#backButton{
+  width: 75px;
+}
+
+header{
+  margin: 0;
+}
+
+
+
+
+
+}
