--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body{
   padding: 0;
   font-family: Arial, sans-serif;
   color: #3C3675; 
-  overflow: hidden;
+  overflow-x: hidden;
 
 
 }
@@ -158,13 +158,27 @@ width: 600px;
 
 
 #folderOne{
-  width: 300px;
-  padding: 4em 0 2em;
-  transition: scale 2s;
-  filter:drop-shadow(10px 10px 10px white);
-  animation: 4s bob ease-in infinite alternate;
+  width: 350px;
+  padding: 2em 0 0;
+}
+
+.folder-holder{
+filter:drop-shadow(10px 10px 10px white);
+animation: 4s bob ease-in infinite alternate;
+animation-delay: 0.1s;
+transition: 0.3s;
 
 }
+
+.blkppl {
+font-weight: bold;
+font-size: 1em;
+margin: 0;
+text-shadow:1px 1px 2px white , 0 0 0.1em black;
+letter-spacing: .05rem;
+}
+
+
 /* OTHER FOLDERS */
 #folderTwo{
   width: 300px;
@@ -177,7 +191,7 @@ width: 600px;
   width:100px;
 }
 
-#folderOne:hover{
+.folder-holder:hover{
   transform:scale(1.5);
   animation: none;
 }
@@ -284,15 +298,30 @@ a.linktree:hover{
 /* ABOUT VID PAGE */
 .about-vid{
   z-index: 1;
-  display: flex;
+  /*display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center;*/
   position: relative;
-  margin-top: 12%;
+  text-align: center;
+  margin: 7em;
+
 }
+
+.about-vid::after{
+  display: block;
+  content: "";
+
+}
+
 .about-vid video{
-  width: 800px;
+  width: 90% !important;
+  height: auto;
+  border: 1px solid black;
+  border-radius: 20px;
+  filter:drop-shadow(0px 0px 8px white);
 }
+
+
 #nextButton{
   width:100px;
 }
@@ -303,42 +332,34 @@ margin-right: 2em;
 
 
 /* ARCHIVE PAGE */
-.cont{
-  display:flex;
-  justify-content: center;
 
-  width: 100vw;
-  height: 100vh;
+.grid-container{
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
 }
 
 
 .archive-grid{
   display:grid;
 
- /*grid-template-columns: 4fr 2fr 2fr 6fr*/
-
-grid-template-columns:repeat(4, 20vw);
- grid-template-rows: repeat(3, 25vh);
- grid-gap: 1em;
-
-  max-width: 50vw;
-  max-height: 60vh;
+ /*grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));*/
 
 
-
+grid-template-columns: 4fr 2fr 2fr 2fr 1fr 2fr 2fr;
+padding: 0 4em 4em;
+max-height: 70vh;
+max-width: 70vw;
+margin: 1em auto;
 
   justify-content: center;
   align-items: center;
+  text-align: center;
+  object-fit: cover;
+  margin-top: 1em;
 
-  display: relative;
   z-index: 3;
-  margin-top: 4em;
-  padding: 0;
-
- /*margin: 2rem;
-  padding: 4rem;*/
-
-
 
 }
 
@@ -364,75 +385,109 @@ grid-template-columns:repeat(4, 20vw);
  
 }
 
-.video-item{
-}
 
-.square{
-width: 200px;
-}
 
-.wideVid{
-  width: 300px;
 
-}
-/*guy bent*/
+/* guy bent */
 .archive-grid li:nth-child(1){
 
-    grid-row: 3 / span 1;
-  grid-column: 1 / span 1;
+  grid-row: 2 / span 2;
+  grid-column: 2 / span 2;
+  z-index: 6;
+
+}
+
+li:nth-child(1) img{
+  max-width: 200px;
 }
 
 /*crowd of people dancing */
 .archive-grid li:nth-child(2){
 
  
-    grid-row: 3 / span 2;
-  grid-column: 2/ span 1;
+  grid-row: 3 / span 1;
+  grid-column: 1/ span 2;
   
+}
+
+li:nth-child(2) img {
+  max-width: 400px;
 }
 
 /*person's butt*/
 .archive-grid li:nth-child(3){
   grid-row: 3 / span 1;
-  grid-column:  3 / span 1;
+  grid-column:  2 / span 2;
+}
+
+li:nth-child(3) img {
+  max-width: 300px;
 }
 
 /*NIC blue sky */
 .archive-grid li:nth-child(4){
-  grid-row: 1 / span 3;
-  grid-column:  2 / span 1;
+  grid-row: 1 / span 2;
+  grid-column:  5 / span 3;
 
+}
+
+li:nth-child(4) img {
+  max-width: 400px;
 }
 
 /*blurry guy pic*/
 .archive-grid li:nth-child(5){
-  grid-row: 1 / span 1;
-  grid-column:  3 / span 1;
+  grid-row: 2 / span 1;
+  grid-column:  2 / span 4;
 }
+
+li:nth-child(5) img {
+  max-width: 150px;
+}
+
 
 /* NIC dancing wall*/
 .archive-grid li:nth-child(6){
 
-    grid-row: 3 / span 1;
-  grid-column: 4 / span 1;
+  grid-row: 2 / span 2;
+  grid-column: 6 / span 2;
+
+}
+
+li:nth-child(6)  img{
+  max-width: 300px;
 }
 /* young guy dancing crowd */
 .archive-grid li:nth-child(7){
   grid-row: 2 / span 1;
-  grid-column:  1 / span 1;
+  grid-column:  3/ span 2;
+  z-index: 2;
+
+}
+
+li:nth-child(7)  img{
+  max-width: 300px;
 }
 
 /*hand emoji */
 .archive-grid li:nth-child(8){
-    grid-row: 2/ span 1;
-  grid-column:  3 / span 1;
-  z-index: 5;
+  grid-row: 3/ span 1;
+  grid-column:  3 / span 3;
+  
+}
+li:nth-child(8)  img{
+  max-width: 200px;
 }
 
 /*similar crowd of ppl dancing, more trees */
 .archive-grid li:nth-child(9){
-    grid-row: 1 / span 1;
-  grid-column: 4 / span 1;
+  grid-row: 2 / span 1;
+  grid-column: 1/ span 3;
+  z-index: 2;
+}
+
+li:nth-child(9) img{
+ max-width: 300px;
 }
 
 /*.archive-grid li:nth-child(9):hover{
@@ -441,21 +496,35 @@ width: 200px;
 
 /* glide */
 .archive-grid li:nth-child(10){
-  grid-row: 2 / span 1;
-  grid-column: 4 / span 1;
+  grid-row: 2 / span 2;
+  grid-column: 4/ span 3;
 }
+
+li:nth-child(10) img{
+  max-width: 300px;
+}
+
 
 /*folder*/
 .archive-grid li:nth-child(11){
-  grid-row: 1 / span 1;
-  grid-column: 1 / span 2;
+  grid-row: 1 / span 2;
+  grid-column: 2 / span 2;
 }
+li:nth-child(10) img{
+  max-width: 200px;
+}
+
+
 
 
 .archive-grid li:hover{
   z-index: 6;
   transform:scale(1.2);
   filter: drop-shadow(0 0 10px black);
+}
+
+.about-folder{
+  z-index: 5 !important;
 }
 
 
@@ -484,14 +553,20 @@ width: 200px;
   top: 0;
   right: 0;
   position: absolute;
-  padding: 2em;
+  padding: 0.5em;
+  margin: 0.5em;
   font-size: 2em;
   color: #4b9374;
+  border: 1px solid white;
+  background-color: white;
+  border-radius: 50%;
+  box-shadow: 2px 2px 2px inset black;
 
 }
 
 .close:hover{
   color:blue;
+  cursor: alias;
 }
 
 .entry-container{
@@ -520,19 +595,70 @@ filter: drop-shadow(0 0 8px #4b9374 );
 
 .entry-text{
   color:#4b9374;
+
+  font-size: 3em;
+  text-transform: uppercase;
+  letter-spacing: .2rem;
+  text-shadow: 2px 1px 1px white, 1px 1px 1px black;
+  border: 1px dashed grey;
+
+  padding: 0.5em 2.5em;
+
+
 }
 .description{
-  color: white;
+  color:white;
   padding: 2em;
+  font-size: 1.25em;
   text-justify: inter-word;
   text-align: justify;
 }
 .sub{
   text-align: center;
+  letter-spacing: .2rem;
+  font-style: italic;
+  padding: 2em 0;
 
+}
+
+.video-edition::after{
+  display: block;
+  content: "";
+
+}
+
+.video-edition video{
+  width: 90% !important;
+  height: auto; 
+}
+
+.icon img{
+  width: 50px;
 }
 
 
 *{
 cursor: url(https://cdn.glitch.com/039decf5-b783-4bb1-8c23-f6aa9c13e1b2%2Fpoint-cur.png?v=1626913185240), auto !important;
 } 
+
+/* media queries */
+
+@media only screen and (max-width: 600px){
+.about-vid{
+  margin: 50% 0;
+}
+
+.entry-container{
+  flex-direction: column;
+}
+
+.entry-text{
+  font-size: 2em;
+  padding: 0 0.5em;
+}
+
+.body{
+  overflow-y: scroll;
+}
+}
+
