--- a/style.css
+++ b/style.css
@@ -46,7 +46,10 @@ body{
   color: #3C3675; 
   overflow-x: hidden;
 
+}
 
+.noscroll{
+  overflow:hidden;
 }
 
 
@@ -104,17 +107,13 @@ footer{
   padding: 2rem;
 }
 
-.day{
-  color: black;
-}
+
 
 #day{
   width: 50px;
 }
 
-.night{
-  color: white;
-}
+
 
 
  /* LANDING PAGE */
@@ -163,7 +162,7 @@ width: 600px;
 }
 
 .folder-holder{
-filter:drop-shadow(10px 10px 10px white);
+filter:drop-shadow(1px 1px 10px white);
 animation: 4s bob ease-in infinite alternate;
 animation-delay: 0.1s;
 transition: 0.3s;
@@ -174,8 +173,11 @@ transition: 0.3s;
 font-weight: bold;
 font-size: 1em;
 margin: 0;
-text-shadow:1px 1px 2px white , 0 0 0.1em black;
+text-shadow:0 0 2px white;
 letter-spacing: .05rem;
+  -webkit-text-stroke-width: 0.25px;
+-webkit-text-stroke-color: black;
+
 }
 
 
@@ -317,7 +319,7 @@ a.linktree:hover{
   width: 90% !important;
   height: auto;
   border: 1px solid black;
-  border-radius: 20px;
+
   filter:drop-shadow(0px 0px 8px white);
 }
 
@@ -368,14 +370,16 @@ margin: 1em auto;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  z-index: 5;
+  z-index: 7 !important;
+  filter: drop-shadow(1px 1px 10px white);
 }
 .about-folder p{
-  padding: 0.5em 1em;
+  /*padding: 0.5em 1em;
   border-radius: 50px;
   border: 1px solid black;
-  background-color:white;
-  z-index: 5;
+  background-color:white;*/
+  font-size: 1.5em;
+  text-shadow:1px 1px 2px white , 0 0 0.1em black;
 }
 
 
@@ -523,10 +527,6 @@ li:nth-child(10) img{
   filter: drop-shadow(0 0 10px black);
 }
 
-.about-folder{
-  z-index: 5 !important;
-}
-
 
 /*POPUP */
 
@@ -553,20 +553,25 @@ li:nth-child(10) img{
   top: 0;
   right: 0;
   position: absolute;
-  padding: 0.5em;
+  padding: 0.25em 0.5em 0.20em;
   margin: 0.5em;
+  border-radius: 70%;
   font-size: 2em;
-  color: #4b9374;
-  border: 1px solid white;
-  background-color: white;
-  border-radius: 50%;
-  box-shadow: 2px 2px 2px inset black;
+  text-transform: uppercase;
+  font-weight: lighter;
+  color: grey;
+  background-color:white;
+  transition: 250ms all ease;
+
+  box-shadow: 1px 1px 3px inset black, 1px 1px 3px white;
+
 
 }
 
 .close:hover{
-  color:blue;
+  color: blue;
   cursor: alias;
+  transform: rotate(180deg);
 }
 
 .entry-container{
@@ -590,17 +595,16 @@ padding: 2em;
 }
 
 .entry-info a:hover{
-filter: drop-shadow(0 0 8px #4b9374 );
+filter: drop-shadow(0 0 8px #5797F7);
 }
 
 .entry-text{
-  color:#4b9374;
+  color: white;
 
   font-size: 3em;
   text-transform: uppercase;
   letter-spacing: .2rem;
-  text-shadow: 2px 1px 1px white, 1px 1px 1px black;
-  border: 1px dashed grey;
+  border: 1px solid white;
 
   padding: 0.5em 2.5em;
 
@@ -650,6 +654,16 @@ cursor: url(https://cdn.glitch.com/039decf5-b783-4bb1-8c23-f6aa9c13e1b2%2Fpoint-
 
 .entry-container{
   flex-direction: column;
+  text-align: center;
+}
+
+.entry-info{
+  overflow-y: scroll;
+}
+
+.entry{
+  margin-top: 2em;
+
 }
 
 .entry-text{
@@ -658,6 +672,18 @@ cursor: url(https://cdn.glitch.com/039decf5-b783-4bb1-8c23-f6aa9c13e1b2%2Fpoint-
 }
 
 .body{
+  background-color: black;
+}
+
+.close{
+font-size: 1.5em;
+}
+  ul{
+    height: 100%;
+    width: 100%;
+}
+
+.noscroll{
   overflow-y: scroll;
 }
 }
