--- a/style.css
+++ b/style.css
@@ -119,10 +119,16 @@ footer{
 
  .alt-button a{
   text-decoration: none;
+  color: #3C3675; 
+  text-shadow:0 0 1px white;
+letter-spacing: .05rem;
+  -webkit-text-stroke-width: 0.25px;
+-webkit-text-stroke-color: black;
 }
 
 .alt-button a:hover{
   filter: drop-shadow(1px 1px 4px blue);
+
 }
 
 
@@ -310,10 +316,9 @@ a.linktree:hover{
 
 /* ABOUT VID PAGE */
 .about-vid{
+
   z-index: 1;
-  /*display: flex;
-  justify-content: center;
-  align-items: center;*/
+
   position: relative;
   text-align: center;
   margin: 7em;
@@ -385,10 +390,6 @@ z-index: 3;
   filter: drop-shadow(1px 1px 10px white);
 }
 .about-folder p{
-  /*padding: 0.5em 1em;
-  border-radius: 50px;
-  border: 1px solid black;
-  background-color:white;*/
   font-size: 1.5em;
   text-shadow:1px 1px 2px white , 0 0 0.1em black;
 }
@@ -504,10 +505,6 @@ li:nth-child(8)  img{
 li:nth-child(9) img{
  max-width: 300px;
 }
-
-/*.archive-grid li:nth-child(9):hover{
-  z-index: 7;
-}*/
 
 /* glide */
 .archive-grid li:nth-child(10){
@@ -722,7 +719,14 @@ font-size: 1.5em;
 
   body{
     overflow-x: hidden;
-    background-image: url(./assets/clouds.jpg);
+   
+  }
+  .day{
+    background-image: url(./assets/cloudy.jpg);
+  }
+
+  .night{
+    background-image: url(./assets/starry-sky.jpg)
   }
 
 
@@ -845,10 +849,6 @@ li:nth-child(8)  img{
 li:nth-child(9) img{
  max-width: 200px;
 }
-
-/*.archive-grid li:nth-child(9):hover{
-  z-index: 7;
-}*/
 
 /* glide */
 .archive-grid li:nth-child(10){
