--- a/style.css
+++ b/style.css
@@ -19,21 +19,9 @@
 }
 
 
-  /*chrome scroll*/
-body::-webkit-scrollbar{
-  width: 15px;
-}
-body::-webkit-scrollbar-track{
-  background: grey;
-  box-shadow: inset 0 0 8px black;
-
-}
-
-body::-webkit-scrollbar-thumb{
-  background:#5EB0C9;
-  border-radius: 20px;
-  box-shadow: inset 0 0 8px black;
-  
+  /*chrome & safari scroll*/
+body::-webkit-scrollbar {
+  display: none;
 }
 
 /* basic universal styles */ 
@@ -120,7 +108,7 @@ footer{
  .alt-button a{
   text-decoration: none;
   color: #3C3675; 
-  text-shadow:0 0 1px white;
+  text-shadow:0 0 3px white;
 letter-spacing: .05rem;
   -webkit-text-stroke-width: 0.25px;
 -webkit-text-stroke-color: black;
@@ -128,7 +116,9 @@ letter-spacing: .05rem;
 
 .alt-button a:hover{
   filter: drop-shadow(1px 1px 4px blue);
-
+}
+.alt-button{
+  font-size: 1.25em;
 }
 
 
@@ -725,7 +715,7 @@ font-size: 1.5em;
   }
 
   .night{
-    background-image: url(./assets/starry-sky.jpg)
+    background-image: url(./assets/stars.jpg)
   }
 
 
@@ -902,5 +892,9 @@ li:nth-child(10) img{
     .video-edition{
       max-width:70vw;
     }
+
+    }
+
+
 }
 
