--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ body{
   color: #3C3675; 
   overflow-x: hidden;
   object-fit: cover;
+  height: 100%;
+  display: grid;
 }
 
 .noscroll{
@@ -348,7 +350,9 @@ margin-right: 2em;
  flex-direction: column;
  align-items: center;
  justify-content: center;
+ height: 100%;
 }
+
 
 
 .archive-grid{
@@ -367,7 +371,8 @@ margin: 1em auto;
   align-items: center;
   text-align: center;
   object-fit: cover;
-  margin-top: 1em;
+  /*margin-top: 1em;*/
+  margin: 5em auto;
 
 z-index: 3;
 
