--- a/style.css
+++ b/style.css
@@ -718,7 +718,7 @@ font-size: 1.5em;
    
   }
   .day{
-    background-image: url(./assets/cloudy.jpg);
+    background-image: url(./assets/clouds-still.png);
   }
 
   .night{
